Styling issues in the debug hover
- Add overflow-y: auto to fix the overflow issue of the debug hover
- The scrollbar on the left side of the debug hover is no longer there

--- a/packages/debug/src/browser/style/index.css
+++ b/packages/debug/src/browser/style/index.css
@@ -369,6 +369,7 @@
 .theia-debug-hover-content {
     display: flex;
     flex: 1;
+    overflow-y: auto;
 }
 
 /** Breakpoint Widget */
